create onedrive custom drive (#3227)
<!-- PR description-->

Run Sanity test with custom onedrive data

#### Does this PR need a docs update or release note?
- [x] :no_entry: No

#### Type of change

<!--- Please check the type of change your PR introduces: --->
- [ ] :bug: Bugfix
- [x] :robot: Supportability/Tests
#### Issue(s)

<!-- Can reference multiple issues. Use one of the following "magic words" - "closes, fixes" to auto-close the Github issue. -->
* #<issue>

#### Test Plan

<!-- How will this be tested prior to merging.-->
- [ ] :muscle: Manual

--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -31,7 +31,8 @@ jobs:
       CORSO_BUCKET: ${{ secrets.CI_TESTS_S3_BUCKET }}
       CORSO_LOG_DIR: testlog
       CORSO_LOG_FILE: testlog/testlogging.log
-      CORSO_M365_TEST_USER_ID: ${{ github.event.inputs.user != '' && github.event.inputs.user || vars.CORSO_M365_TEST_USER_ID }}
+      TEST_USER: ${{ github.event.inputs.user != '' && github.event.inputs.user || secrets.CORSO_M365_TEST_USER_ID }}
+      SECONDARY_TEST_USER : ${{  secrets.CORSO_SECONDARY_M365_TEST_USER_ID }}
       CORSO_PASSPHRASE: ${{ secrets.INTEGRATION_TEST_CORSO_PASSPHRASE }}
       TEST_RESULT: test_results
       # The default working directory doesn't seem to apply to things without
@@ -116,7 +117,7 @@ jobs:
           AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
         run: |
           go run . exchange emails \
-          --user ${{ env.CORSO_M365_TEST_USER_ID }} \
+          --user ${{ env.TEST_USER }} \
           --tenant ${{ env.AZURE_TENANT_ID }} \
           --destination Corso_Restore_st_${{ steps.repo-init.outputs.result }} \
           --count 4
@@ -128,7 +129,7 @@ jobs:
           echo -e "\nBackup Exchange test\n" >> ${CORSO_LOG_FILE}
           ./corso backup create exchange \
           --no-stats \
-          --mailbox "${CORSO_M365_TEST_USER_ID}" \
+          --mailbox "${TEST_USER}" \
           --hide-progress \
           --data 'email' \
           --json \
@@ -136,7 +137,7 @@ jobs:
 
           resultjson=$(sed -e '1,/Completed Backups/d' $TEST_RESULT/backup_exchange.txt ) 
 
-           if  [[ $( echo $resultjson | jq -r '.[0] | .stats.errorCount') -ne 0 ]]; then
+          if  [[ $( echo $resultjson | jq -r '.[0] | .stats.errorCount') -ne 0 ]]; then
             echo "backup was not successful"
             exit 1
           fi
@@ -209,7 +210,7 @@ jobs:
           ./corso backup create exchange \
           --no-stats \
           --hide-progress \
-          --mailbox "${CORSO_M365_TEST_USER_ID}" \
+          --mailbox "${TEST_USER}" \
           --json \
           2>&1 | tee $TEST_RESULT/backup_exchange_incremental.txt 
 
@@ -248,6 +249,26 @@ jobs:
 
 # Onedrive test
 
+       # generate new entries for OneDrive sanity test
+      - name: New Data Creation for OneDrive
+        id: new-data-creation-onedrive
+        working-directory: ./src/cmd/factory
+        env:
+          AZURE_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          AZURE_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
+        run: |
+          suffix=`date +"%Y-%m-%d_%H-%M"`
+
+          go run . onedrive files  \
+          --user ${{ env.TEST_USER }} \
+          --secondaryuser  ${{ env.SECONDARY_TEST_USER }} \
+          --tenant ${{ env.AZURE_TENANT_ID }} \
+          --destination Corso_Restore_st_$suffix \
+          --count 4
+
+          echo result="$suffix" >> $GITHUB_OUTPUT
+
       # run the tests
       - name: Backup onedrive test
         id: onedrive-test
@@ -257,7 +278,7 @@ jobs:
           ./corso backup create onedrive \
           --no-stats \
           --hide-progress \
-          --user "${CORSO_M365_TEST_USER_ID}" \
+          --user "${TEST_USER}" \
           --json \
           2>&1 | tee $TEST_RESULT/backup_onedrive.txt 
 
@@ -313,19 +334,35 @@ jobs:
           ./corso restore onedrive \
           --no-stats \
           --restore-permissions \
+          --folder Corso_Restore_st_${{ steps.new-data-creation-onedrive.outputs.result }} \
           --hide-progress \
           --backup "${{ steps.onedrive-test.outputs.result }}" \
           2>&1 | tee $TEST_RESULT/onedrive-restore-test.txt 
           echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/onedrive-restore-test.txt | sed "s/Restoring to folder//")  >> $GITHUB_OUTPUT
 
-      # Commenting for test cases to pass. And working on its fix
-      # - name: Restoration oneDrive check
-      #   env:
-      #     SANITY_RESTORE_FOLDER: ${{ steps.onedrive-restore-test.outputs.result }}
-      #     SANITY_RESTORE_SERVICE: "onedrive"
-      #   run: |
-      #     set -euo pipefail
-      #     ./sanityCheck
+      - name: Restoration oneDrive check
+        env:
+          SANITY_RESTORE_FOLDER: ${{ steps.onedrive-restore-test.outputs.result }}
+          SANITY_RESTORE_SERVICE: "onedrive"
+          TEST_DATA: Corso_Restore_st_${{ steps.new-data-creation-onedrive.outputs.result }}
+        run: |
+          set -euo pipefail
+          ./sanityCheck
+
+       # generate some more enteries for incremental check
+      - name: New Data Creation for Incremental OneDrive
+        working-directory: ./src/cmd/factory
+        env:
+          AZURE_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          AZURE_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
+        run: |
+          go run . onedrive files  \
+          --user ${{ env.TEST_USER }} \
+          --secondaryuser  ${{ env.SECONDARY_TEST_USER }} \
+          --tenant ${{ env.AZURE_TENANT_ID }} \
+          --destination Corso_Restore_st_${{ steps.new-data-creation-onedrive.outputs.result }} \
+          --count 4
 
       # test onedrive incremental
       - name: Backup onedrive incremental
@@ -336,7 +373,7 @@ jobs:
           ./corso backup create onedrive \
           --no-stats \
           --hide-progress \
-          --user "${CORSO_M365_TEST_USER_ID}" \
+          --user "${TEST_USER}" \
           --json \
           2>&1 | tee $TEST_RESULT/backup_onedrive_incremental.txt 
           
@@ -360,18 +397,19 @@ jobs:
           --no-stats \
           --restore-permissions \
           --hide-progress \
+          --folder Corso_Restore_st_${{ steps.new-data-creation-onedrive.outputs.result }} \
           --backup "${{ steps.onedrive-incremental-test.outputs.result }}" \
           2>&1 | tee $TEST_RESULT/onedrive-incremental-restore-test.txt 
           echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/onedrive-incremental-restore-test.txt | sed "s/Restoring to folder//")  >> $GITHUB_OUTPUT
 
-      # Commenting for test cases to pass. And working on its fix
-      # - name: Restoration oneDrive check
-      #   env:
-      #     SANITY_RESTORE_FOLDER: ${{ steps.onedrive-incremental-restore-test.outputs.result }}
-      #     SANITY_RESTORE_SERVICE: "onedrive"
-      #   run: |
-      #     set -euo pipefail
-      #     ./sanityCheck
+      - name: Restoration oneDrive check
+        env:
+          SANITY_RESTORE_FOLDER: ${{ steps.onedrive-incremental-restore-test.outputs.result }}
+          SANITY_RESTORE_SERVICE: "onedrive"
+          TEST_DATA: Corso_Restore_st_${{ steps.new-data-creation-onedrive.outputs.result }}
+        run: |
+          set -euo pipefail
+          ./sanityCheck
 
       # Upload the original go test output as an artifact for later review.
       - name: Upload test log
