--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -248,6 +248,53 @@ jobs:
           set -euo pipefail
           ./sanityTest
 
+      # non-delta backup
+      - name: Backup exchange incremental
+        id: exchange-incremental-test
+        run: |
+          set -euo pipefail
+          echo -e "\nBackup Exchange incremental test\n" >> ${CORSO_LOG_FILE}
+          ./corso backup create exchange \
+          --no-stats \
+          --hide-progress \
+          --disable-delta \
+          --mailbox "${TEST_USER}" \
+          --json \
+          2>&1 | tee $TEST_RESULT/backup_exchange_incremental.txt 
+
+          resultjson=$(sed -e '1,/Completed Backups/d' $TEST_RESULT/backup_exchange_incremental.txt ) 
+
+          if  [[ $( echo $resultjson | jq -r '.[0] | .stats.errorCount') -ne 0 ]]; then
+            echo "backup was not successful"
+            exit 1
+          fi
+
+          echo result=$( echo $resultjson | jq -r '.[0] | .id' ) >> $GITHUB_OUTPUT
+
+      # restore from non delta
+      - name: Backup non delta exchange restore
+        id: exchange-non-delta-restore-test
+        run: |
+          set -euo pipefail
+          echo -e "\nBackup Exchange incremental restore test\n" >> ${CORSO_LOG_FILE}
+          ./corso restore exchange \
+          --no-stats \
+          --hide-progress \
+          --backup "${{ steps.exchange-incremental-test.outputs.result }}" \
+          --email-folder Corso_Restore_st_${{ steps.repo-init.outputs.result }} \
+          2>&1 | tee $TEST_RESULT/exchange-incremantal-restore-test.txt
+          echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/exchange-incremantal-restore-test.txt | sed "s/Restoring to folder//" )  >> $GITHUB_OUTPUT
+        
+      - name: Restoration check
+        env:
+          SANITY_RESTORE_FOLDER: ${{ steps.exchange-non-delta-restore-test.outputs.result }}
+          SANITY_RESTORE_SERVICE: "exchange"
+          TEST_DATA: Corso_Restore_st_${{ steps.repo-init.outputs.result }}
+          BASE_BACKUP: ${{ steps.exchange-restore-test.outputs.result }}
+        run: |
+          set -euo pipefail
+          ./sanityTest
+
 ##########################################################################################################################################
 
 # Onedrive
