--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -35,11 +35,12 @@ jobs:
       CORSO_BUCKET: ${{ secrets.CI_TESTS_S3_BUCKET }}
       CORSO_LOG_DIR: testlog
       CORSO_LOG_FILE: testlog/testlogging.log
+      CORSO_PASSPHRASE: ${{ secrets.INTEGRATION_TEST_CORSO_PASSPHRASE }}
+      RESTORE_DEST_PFX: Corso_Test_sanity
+      TEST_RESULT: test_results
       TEST_USER: ${{ github.event.inputs.user != '' && github.event.inputs.user || secrets.CORSO_M365_TEST_USER_ID }}
       TEST_SITE: ${{ secrets.CORSO_M365_TEST_SITE_URL }}
       SECONDARY_TEST_USER : ${{  secrets.CORSO_SECONDARY_M365_TEST_USER_ID }}
-      CORSO_PASSPHRASE: ${{ secrets.INTEGRATION_TEST_CORSO_PASSPHRASE }}
-      TEST_RESULT: test_results
       # The default working directory doesn't seem to apply to things without
       # the 'run' directive. https://stackoverflow.com/a/67845456
       WORKING_DIR: src
@@ -126,7 +127,7 @@ jobs:
           go run . exchange emails \
           --user ${TEST_USER} \
           --tenant ${{ env.AZURE_TENANT_ID }} \
-          --destination Corso_Test_sanity${{ steps.repo-init.outputs.result }} \
+          --destination ${{ env.RESTORE_DEST_PFX }}${{ steps.repo-init.outputs.result }} \
           --count 4
 
       - name: Backup exchange test
@@ -192,7 +193,7 @@ jobs:
           echo -e "\nBackup Exchange restore test\n" >> ${CORSO_LOG_FILE}
           ./corso restore exchange \
           --no-stats \
-          --email-folder Corso_Test_sanity${{ steps.repo-init.outputs.result }} \
+          --email-folder ${{ env.RESTORE_DEST_PFX }}${{ steps.repo-init.outputs.result }} \
           --hide-progress \
           --backup "${{ steps.exchange-test.outputs.result }}" \
           2>&1 | tee $TEST_RESULT/exchange-restore-test.txt
@@ -202,7 +203,7 @@ jobs:
         env:
           SANITY_RESTORE_FOLDER: ${{ steps.exchange-restore-test.outputs.result }}
           SANITY_RESTORE_SERVICE: "exchange"
-          TEST_DATA: Corso_Test_sanity${{ steps.repo-init.outputs.result }}
+          TEST_DATA: ${{ env.RESTORE_DEST_PFX }}${{ steps.repo-init.outputs.result }}
         run: |
           set -euo pipefail
           ./sanityTest
@@ -239,7 +240,7 @@ jobs:
           --no-stats \
           --hide-progress \
           --backup "${{ steps.exchange-incremental-test.outputs.result }}" \
-          --email-folder Corso_Test_sanity${{ steps.repo-init.outputs.result }} \
+          --email-folder ${{ env.RESTORE_DEST_PFX }}${{ steps.repo-init.outputs.result }} \
           2>&1 | tee $TEST_RESULT/exchange-incremantal-restore-test.txt
           echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/exchange-incremantal-restore-test.txt | sed "s/Restoring to folder//" )  >> $GITHUB_OUTPUT
         
@@ -247,7 +248,7 @@ jobs:
         env:
           SANITY_RESTORE_FOLDER: ${{ steps.exchange-incremantal-restore-test.outputs.result }}
           SANITY_RESTORE_SERVICE: "exchange"
-          TEST_DATA: Corso_Test_sanity${{ steps.repo-init.outputs.result }}
+          TEST_DATA: ${{ env.RESTORE_DEST_PFX }}${{ steps.repo-init.outputs.result }}
           BASE_BACKUP: ${{ steps.exchange-restore-test.outputs.result }}
         run: |
           set -euo pipefail
@@ -286,7 +287,7 @@ jobs:
           --no-stats \
           --hide-progress \
           --backup "${{ steps.exchange-incremental-test-no-delta.outputs.result }}" \
-          --email-folder Corso_Restore_st_${{ steps.repo-init.outputs.result }} \
+          --email-folder ${{ env.RESTORE_DEST_PFX }}${{ steps.repo-init.outputs.result }} \
           2>&1 | tee $TEST_RESULT/exchange-incremantal-restore-test.txt
           echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/exchange-incremantal-restore-test.txt | sed "s/Restoring to folder//" )  >> $GITHUB_OUTPUT
         
@@ -294,7 +295,7 @@ jobs:
         env:
           SANITY_RESTORE_FOLDER: ${{ steps.exchange-non-delta-restore-test.outputs.result }}
           SANITY_RESTORE_SERVICE: "exchange"
-          TEST_DATA: Corso_Restore_st_${{ steps.repo-init.outputs.result }}
+          TEST_DATA: ${{ env.RESTORE_DEST_PFX }}${{ steps.repo-init.outputs.result }}
           BASE_BACKUP: ${{ steps.exchange-restore-test.outputs.result }}
         run: |
           set -euo pipefail
@@ -332,7 +333,7 @@ jobs:
           --no-stats \
           --hide-progress \
           --backup "${{ steps.exchange-incremental-test-after-non-delta.outputs.result }}" \
-          --email-folder Corso_Restore_st_${{ steps.repo-init.outputs.result }} \
+          --email-folder ${{ env.RESTORE_DEST_PFX }}${{ steps.repo-init.outputs.result }} \
           2>&1 | tee $TEST_RESULT/exchange-incremantal-restore-test-after-non-delta.txt
           echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/exchange-incremantal-restore-test-after-non-delta.txt | sed "s/Restoring to folder//" )  >> $GITHUB_OUTPUT
 
@@ -340,7 +341,7 @@ jobs:
         env:
           SANITY_RESTORE_FOLDER: ${{ steps.exchange-incremantal-restore-test-after-non-delta.outputs.result }}
           SANITY_RESTORE_SERVICE: "exchange"
-          TEST_DATA: Corso_Restore_st_${{ steps.repo-init.outputs.result }}
+          TEST_DATA: ${{ env.RESTORE_DEST_PFX }}${{ steps.repo-init.outputs.result }}
           BASE_BACKUP: ${{ steps.exchange-restore-test.outputs.result }}
         run: |
           set -euo pipefail
@@ -365,7 +366,7 @@ jobs:
           --user ${TEST_USER} \
           --secondaryuser  ${{ env.SECONDARY_TEST_USER }} \
           --tenant ${{ env.AZURE_TENANT_ID }} \
-          --destination Corso_Test_sanity$suffix \
+          --destination ${{ env.RESTORE_DEST_PFX }}$suffix \
           --count 4
 
           echo result="$suffix" >> $GITHUB_OUTPUT
@@ -434,7 +435,7 @@ jobs:
           ./corso restore onedrive \
           --no-stats \
           --restore-permissions \
-          --folder Corso_Test_sanity${{ steps.new-data-creation-onedrive.outputs.result }} \
+          --folder ${{ env.RESTORE_DEST_PFX }}${{ steps.new-data-creation-onedrive.outputs.result }} \
           --hide-progress \
           --backup "${{ steps.onedrive-test.outputs.result }}" \
           2>&1 | tee $TEST_RESULT/onedrive-restore-test.txt 
@@ -444,7 +445,7 @@ jobs:
         env:
           SANITY_RESTORE_FOLDER: ${{ steps.onedrive-restore-test.outputs.result }}
           SANITY_RESTORE_SERVICE: "onedrive"
-          TEST_DATA: Corso_Test_sanity${{ steps.new-data-creation-onedrive.outputs.result }}
+          TEST_DATA: ${{ env.RESTORE_DEST_PFX }}${{ steps.new-data-creation-onedrive.outputs.result }}
         run: |
           set -euo pipefail
           ./sanityTest
@@ -461,7 +462,7 @@ jobs:
           --user ${TEST_USER} \
           --secondaryuser  ${{ env.SECONDARY_TEST_USER }} \
           --tenant ${{ env.AZURE_TENANT_ID }} \
-          --destination Corso_Test_sanity${{ steps.new-data-creation-onedrive.outputs.result }} \
+          --destination ${{ env.RESTORE_DEST_PFX }}${{ steps.new-data-creation-onedrive.outputs.result }} \
           --count 4
 
       # incremental backup
@@ -497,7 +498,7 @@ jobs:
           --no-stats \
           --restore-permissions \
           --hide-progress \
-          --folder Corso_Test_sanity${{ steps.new-data-creation-onedrive.outputs.result }} \
+          --folder ${{ env.RESTORE_DEST_PFX }}${{ steps.new-data-creation-onedrive.outputs.result }} \
           --backup "${{ steps.onedrive-incremental-test.outputs.result }}" \
           2>&1 | tee $TEST_RESULT/onedrive-incremental-restore-test.txt 
           echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/onedrive-incremental-restore-test.txt | sed "s/Restoring to folder//")  >> $GITHUB_OUTPUT
@@ -506,7 +507,7 @@ jobs:
         env:
           SANITY_RESTORE_FOLDER: ${{ steps.onedrive-incremental-restore-test.outputs.result }}
           SANITY_RESTORE_SERVICE: "onedrive"
-          TEST_DATA: Corso_Test_sanity${{ steps.new-data-creation-onedrive.outputs.result }}
+          TEST_DATA: ${{ env.RESTORE_DEST_PFX }}${{ steps.new-data-creation-onedrive.outputs.result }}
         run: |
           set -euo pipefail
           ./sanityTest
@@ -515,7 +516,26 @@ jobs:
 
 # Sharepoint test
 
-      # TODO(keepers): generate new entries for test
+      # generate new entries for test
+      - name: New Data Creation for SharePoint
+        id: new-data-creation-sharepoint
+        working-directory: ./src/cmd/factory
+        env:
+          AZURE_CLIENT_ID: ${{ secrets[needs.SetM365App.outputs.client_id_env] }}
+          AZURE_CLIENT_SECRET: ${{ secrets[needs.SetM365App.outputs.client_secret_env] }} 
+          AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
+        run: |
+          suffix=`date +"%Y-%m-%d_%H-%M"`
+
+          go run . sharepoint files  \
+          --site "${TEST_SITE}" \
+          --user "${TEST_USER}" \
+          --secondaryuser  ${SECONDARY_TEST_USER} \
+          --tenant ${{ env.AZURE_TENANT_ID }} \
+          --destination ${{ env.RESTORE_DEST_PFX }}$suffix \
+          --count 4
+
+          echo result="$suffix" >> $GITHUB_OUTPUT
 
       - name: Backup sharepoint test
         id: sharepoint-test
@@ -585,12 +605,10 @@ jobs:
           ./corso restore sharepoint \
           --no-stats \
           --hide-progress \
+          --restore-permissions \
           --backup "${{ steps.sharepoint-test.outputs.result }}" \
           2>&1 | tee $TEST_RESULT/sharepoint-restore-test.txt 
           echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/sharepoint-restore-test.txt | sed "s/Restoring to folder//")  >> $GITHUB_OUTPUT
-
-    # TODO: Add when supported      
-    # --restore-permissions \
 
       - name: Restoration sharepoint check
         env:
@@ -600,7 +618,25 @@ jobs:
           set -euo pipefail
           ./sanityTest
 
-      # TODO(rkeepers): generate some more entries for incremental check
+      # generate some more entries for incremental check
+      - name: New Data Creation for SharePoint
+        id: new-data-creation-sharepoint
+        working-directory: ./src/cmd/factory
+        env:
+          AZURE_CLIENT_ID: ${{ secrets[needs.SetM365App.outputs.client_id_env] }}
+          AZURE_CLIENT_SECRET: ${{ secrets[needs.SetM365App.outputs.client_secret_env] }} 
+          AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
+        run: |
+          suffix=`date +"%Y-%m-%d_%H-%M"`
+
+          go run . sharepoint files  \
+          --site "${TEST_SITE}" \
+          --secondaryuser  ${SECONDARY_TEST_USER} \
+          --tenant ${{ env.AZURE_TENANT_ID }} \
+          --destination ${{ env.RESTORE_DEST_PFX }}$suffix \
+          --count 4
+
+          echo result="$suffix" >> $GITHUB_OUTPUT
 
       # incremental backup
       - name: Backup sharepoint incremental
@@ -636,12 +672,10 @@ jobs:
           ./corso restore sharepoint \
           --no-stats \
           --hide-progress \
+          --restore-permissions \
           --backup "${{ steps.sharepoint-incremental-test.outputs.result }}" \
           2>&1 | tee $TEST_RESULT/sharepoint-incremental-restore-test.txt 
           echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/sharepoint-incremental-restore-test.txt | sed "s/Restoring to folder//")  >> $GITHUB_OUTPUT
-
-    # TODO: Add when supported      
-    # --restore-permissions \
 
       - name: Restoration sharepoint check
         env:
