--- a/.github/workflows/load_test.yml
+++ b/.github/workflows/load_test.yml
@@ -1,10 +1,8 @@
 name: Nightly Load Testing
 on:
   schedule:
-    # every day at 01:59 (01:59am) UTC
-    # - cron: "59 1 * * *"
-    # temp, for testing: every 4 hours
-    - cron: "0 */4 * * *"
+    # every day at 05:59 GMT (roughly 10pm PST)
+    - cron: "59 5 * * *"
 
 permissions:
   # required to retrieve AWS credentials
@@ -20,6 +18,10 @@ jobs:
   Load-Tests:
     environment: Load Testing
     runs-on: ubuntu-latest
+    # Skipping load testing for now.  They need some love to get up and
+    # running properly, and it's better to not fight for resources with
+    # tests that are guaranteed to fail.
+    if: false
     defaults:
       run:
         working-directory: src
