--- a/.github/actions/backup-restore-test/action.yml
+++ b/.github/actions/backup-restore-test/action.yml
@@ -29,17 +29,6 @@ outputs:
 runs:
   using: composite
   steps:
-    - uses: actions/checkout@v3
-
-    - name: Setup Golang with cache
-      uses: magnetikonline/action-golang-cache@v4
-      with:
-        go-version-file: src/go.mod
-
-    - run: go build -o corso
-      shell: bash
-      working-directory: src
-
     - name: Backup ${{ inputs.service }} ${{ inputs.kind }}
       id: backup
       shell: bash
@@ -80,7 +69,7 @@ runs:
         TEST_DATA: ${{ inputs.test-folder }}
         BASE_BACKUP: ${{ inputs.base-backup }}
       run: |
-        go run ./cmd/sanity_test
+        ./sanity-test
 
     - name: List ${{ inputs.service }} ${{ inputs.kind }}
       shell: bash
