Use go build instead of make build
Make needs golangci-lint to be installed, which is not available in
the CI env at this stage. It would still build, but with an error.

--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -60,7 +60,7 @@ jobs:
         with:
           go-version-file: src/go.mod
 
-      - run: make build
+      - run: go build -o corso
       - run: go build -o sanity-test ./cmd/sanity_test
 
       - run: mkdir ${TEST_RESULT}
